--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "savks/e-search",
-    "license": "proprietary",
+    "license": "MIT",
     "require": {
         "elasticsearch/elasticsearch": "~8.0"
     },
