--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "savks/e-search",
     "license": "MIT",
     "require": {
+        "php": "^8.1",
         "elasticsearch/elasticsearch": "~8.0"
     },
     "autoload": {
